--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta property="og:title" content="網站 Meta 測試" />
         <meta property="og:description" content="這是使用 Open Graph 格式來實現網頁標籤" />
         <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/1081/1081007.png" />
+        <meta property="og:url" content="https://zxcj04.github.io/HtmlMetaTest/" />
     </head>
     <body>
         <h1>Index</h1>
